fix: remove base-uri 'self' restriction

--- a/examples/simple-host/sandbox.html
+++ b/examples/simple-host/sandbox.html
@@ -16,7 +16,7 @@
       style-src * blob: data: 'unsafe-inline';
       connect-src *;
       frame-src * blob: data: http://localhost:* https://localhost:*;
-      base-uri 'self';
+      base-uri *;
     " />
     <title>MCP-UI Proxy</title>
     <style>
